--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 [build]
-  publish = "src/client/dist"
-  command = "npm run build:frontend"
+  publish = "dist"
+  command = "npm run build"
 
 [[redirects]]
   from = "/*"
