--- a/package.json
+++ b/package.json
@@ -4,15 +4,14 @@
   "version": "0.1.0",
   "type": "module",
   "scripts": {
-    "build": "modelence build",
+    "build": "vite build",
     "build:frontend": "vite build",
-    "start": "node .modelence/build/app.mjs",
-    "dev": "modelence dev",
+    "dev": "vite",
+    "preview": "vite preview",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
-    "modelence": "^0.5.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
@@ -26,6 +25,8 @@
     "netlify-cli": "^23.4.2",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "vite": "^5.0.0",
+    "@vitejs/plugin-react": "^4.0.0"
   }
 }
